--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "@tanstack/react-table": "^8.21.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "lucide-react": "^0.575.0",
     "radix-ui": "^1.4.3",
     "react": "^19.2.0",
+    "react-day-picker": "^9.13.2",
     "react-dom": "^19.2.0",
     "react-router": "^7.13.0",
     "tailwind-merge": "^3.5.0",
